fixing release and deploy scripts

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ before_deploy:
 
 deploy:
   provider: script
-  script: 'yarn lerna publish from-git'
+  script: 'yarn lerna publish from-git --yes'
   skip_cleanup: true
   on:
     node: 'lts/*'
