--- a/package.json
+++ b/package.json
@@ -29,22 +29,24 @@
     "packages/*"
   ],
   "devDependencies": {
-    "@shopify/graphql-testing": "^3.0.0",
+    "@shopify/graphql-testing": "^4.0.0",
     "@types/faker": "^4.0.0",
     "@types/graphql": "^14.0.0",
     "@types/jest": "^24.0.0",
+    "@typescript-eslint/eslint-plugin": "^1.0.0",
+    "@typescript-eslint/parser": "^1.0.0",
     "apollo-link": "^1.0.0",
     "apollo-utilities": "^1.0.0",
     "codecov": "^3.0.0",
     "coveralls": "^3.0.0",
-    "eslint": "^5.0.0",
-    "eslint-plugin-shopify": "^28.0.0",
+    "eslint": "^6.0.0",
+    "eslint-plugin-shopify": "^29.0.0",
     "eslint-stats": "^1.0.0",
     "faker": "^4.0.0",
     "firebase": "^6.0.0",
     "graphql": "^14.0.0",
     "graphql-anywhere": "^4.0.0",
-    "husky": "^2.0.0",
+    "husky": "^3.0.0",
     "jest": "^24.0.0",
     "jest-extended": "^0.11.0",
     "jest-transform-graphql": "^2.0.0",
@@ -57,8 +59,7 @@
     "zen-observable-ts": "^0.8.0"
   },
   "resolutions": {
-    "typescript-estree": "18.1.0",
-    "typescript-eslint-parser": "^22.0.0"
+    "eslint": "6.0.1"
   },
   "husky": {
     "hooks": {
